--- a/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bp_and_query_definitions_mixins.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bp_and_query_definitions_mixins.scss
@@ -51,7 +51,7 @@ $breakpoints: (
   }
 }
 
-
+//! none of these variables are in use
 $mq-phone-small: "(max-width: #{bp-phone-small})";
 $mq-phone: "(min-width: #{bp-phone})";
 $mq-phone-wide: "(min-width: #{bp-phone-wide})";
