--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -6,6 +6,7 @@
 @import "theme/partials/mixins/bootstrap_mixins_override";
 @import "theme/partials/variables/_theme_font_variables";
 // @import "theme/partials/navigation/navigation_import";
+@import "theme/partials/mixins/css_hover_mixins";
 @import "theme/partials/variables/_style_assets";
 @import "theme/partials/variables/_theme_color_and_nav_variables";
 
@@ -15,7 +16,8 @@
 @import "assets/bootstrap4";
 @import "theme/partials/mixins/bp_and_query_definitions_mixins";
 @import "theme/partials/mixins/flexbox_mixins";
-@import "theme/partials/mixins/css_hover_mixins";
+@import "theme/partials/real-time-refactoring";
+
 @import "theme/partials/layout_mixins";
 
 @import "../src/sass/understrap/understrap/understrap";
@@ -55,7 +57,7 @@
 @import "theme/partials/style_tweaks";
 
 @import "theme/partials/display_state_styles";
-@import "theme/partials/real-time-refactoring";
+
 
 
 //  @import "theme/dev_utilities/sandbox";
@@ -64,7 +66,7 @@
 //  @import "theme/dev_utilities/palette";
 
 
-@import "theme/partials/contact_article_layout_template";
+// @import "theme/partials/contact_article_layout_template";
 
 // @import "theme/partials/custom_variables";
 
