--- a/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
@@ -1652,7 +1652,7 @@ svg#services__arrow--img {
 }
 
 .my-capabilities {
-  padding-top: 4rem;
+//   padding-top: 4rem;
 
   // h1 {
   //   flex: 0 0 auto;
@@ -3206,27 +3206,28 @@ margin-right: auto;
   h1 {
     margin-top: auto;
     flex: 0 0 auto;
-
-    @extend %title;
+    @include title();
+    font-weight: 600;
+    letter-spacing: -.035em;
   }
 
   h2 {
     flex: 0 0 auto;
 
-    @extend %subhead-lg;
+    // @extend %subhead-lg;
   }
 
   h3 {
     flex: 0 0 auto;
 
-    @extend %display-text-lg;
+    // @extend %display-text-lg;
   }
 
   p {
     flex: 0 0 auto;
     margin-bottom: auto;
 
-    @extend %body-text-lg;
+    // @extend %body-text-lg;
   }
 
   // .link {
