--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/_style_assets.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/_style_assets.scss
@@ -51,6 +51,88 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8f9fa', end
 
 
 
+//*=============================================
+//*=            hover effects            =
+//*=============================================*/
+
+@mixin hvr-underline-from-center {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+
+.hvr-underline-from-center{
+  @include hvr-underline-from-center();
+}
+
+
+
+
+
+.hvr-underline-from-center:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 51%;
+  right: 51%;
+  bottom: 0;
+  height: 1px;
+  -webkit-transition-property: left, right;
+  transition-property: left, right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
+  left: 0;
+  right: 0;
+}
+
+/* Sweep To Top */
+.sweep-to-top {
+  @include hacks;
+  position: relative;
+  @include prefixed(transition-property, color);
+  @include prefixed(transition-duration, $mediumDuration);
+
+  &:before {
+      content: "";
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: $activeColor;
+      @include prefixed(transform, scaleY(0));
+      @include prefixed(transform-origin, 50% 100%);
+      @include prefixed(transition-property, transform);
+      @include prefixed(transition-duration, $mediumDuration);
+      @include prefixed(transition-timing-function, ease-out);
+  }
+
+  &:hover, &:focus, &:active {
+      color: white;
+
+      &:before {
+          @include prefixed(transform, scaleY(1));
+      }
+
+  }
+
+}
+
+
+
+/*=====  End of Section comment block  ======*/
+
+
 
 
 
