--- a/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
@@ -2175,7 +2175,7 @@ max-width: 100%;
 
 .commitment__subhead_ {
   // background-color: $primary;
-  @include vr($padding: 0 1);
+  // @include vr($padding: 0 1);
 
   // text-align: center;
   // max-width: 200px;
