--- a/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bp_and_query_definitions_mixins.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bp_and_query_definitions_mixins.scss
@@ -51,6 +51,10 @@ $breakpoints: (
   }
 }
 
+// @mixin tablet-wide{
+  // @media (min-width: #{$tablet}) and (max-width: #{$desktop})
+// }
+
 //! none of these variables are in use
 $mq-phone-small: "(max-width: #{bp-phone-small})";
 $mq-phone: "(min-width: #{bp-phone})";
