--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/_style_assets.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/_style_assets.scss
@@ -332,6 +332,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8f9fa', end
   box-shadow: 12px 10px 19px -14px rgba(0, 0, 0, 0.5);
 }
 
+@mixin dark-shadow {
+  -webkit-box-shadow: 12px 10px 19px -14px rgba(0, 0, 0, 0.9);
+  -moz-box-shadow: 12px 10px 19px -14px rgba(0, 0, 0, 0.9);
+  box-shadow: 12px 10px 19px -14px rgba(0, 0, 0, 0.9);
+}
+
 
 
 
